updated css and html

--- a/index.html
+++ b/index.html
@@ -1,83 +1,28 @@
 <!DOCTYPE html>
 <head>
   <title>My Website</title>
-  <meta charset="UTF-8" />
+  <meta
+    charset="UTF-8"
+    name="viewport"
+    content="width=device-width, initial-scale=1"
+  />
+  <link rel="stylesheet" href="./stlyes/styles.css" />
 </head>
-<body>
-  <header style="padding: 25px; margin: 25px; border: 1px solid #000">
-    <title>The One And Only Me: Jan</title>
-    <h1 align="center">The One And Only Me: Jan</h1>
-    <nav style="border: 1px solid #000">
-      <a href="about me" style="color: #000">About me</a>
-      <a href="contact" style="color: #000">Contact</a>
-      <a href="skillset" style="color: #000">Skillset</a>
-    </nav>
-  </header>
 
-  <main style="padding: 25px; margin: 25px; border: 1px solid #000">
-    <article id="about me" style="border: 1px solid #000">
-      <h2 align="center">About me</h2>
-      <div style="display: flex; gap: 12px">
-        <img
-          style="width: 150px; height: 150px"
-          src="stressed-elderly-old-man-using-computer-blowing-steam-from-ears-frustrated-J4YK3A.jpg"
-          alt="Ein Bild von mir"
-        />
-        <br />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam
-          temporibus soluta dignissimos quo est vel vero debitis nobis voluptate
-          saepe perferendis, doloremque, cumque dicta quia recusandae nesciunt?
-          Dolorum, perferendis.
-        </p>
-      </div>
-    </article>
-    <article
-      id="contact"
-      style="padding: 25px; margin: 25px; border: 1px solid #000"
-    >
-      <h2 align="center">How to contact me!</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ut numquam
-        optio quam quisquam libero iusto sit expedita odit ipsum reiciendis
-        molestias et ullam sequi provident a, hic praesentium vitae.
-        <br />
-        <br />
-        <a href="google.com">Click here</a>
-      </p>
-    </article>
-    <article
-      id="skillset"
-      style="padding: 25px; margin: 25px; border: 1px solid #000"
-    >
-      <h2 align="center">Skillset</h2>
-      <p><strong>I need to know:</strong></p>
-      <li>
-        <ul>
-          HTML
-        </ul>
-        <ul>
-          CSS
-        </ul>
-        <ul>
-          JavaScript
-        </ul>
-        <ul>
-          React
-        </ul>
-        <ul>
-          Painting rainbows
-        </ul>
-        <ul>
-          Party
-        </ul>
-      </li>
-    </article>
-  </main>
+<body>
+  <div class="bg">
+    <header>
+      <title>Personal Website</title>
+      <h1 class="header-title">Personal Website</h1>
+      <nav class="navigation">
+        <a href="" class="navigation-content">About me</a>
+        <a href="" class="navigation-content">Contact</a>
+        <a href="" class="navigation-content">Skillset</a>
+      </nav>
+    </header>
+
+    <main></main>
+  </div>
 </body>
-<footer
-  style="padding: 25px; margin: 25px; border: 1px solid #000"
-  align="center"
->
-  This is probably the end.
-</footer>
+
+<footer></footer>
