updated css and html

--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
-<head>
-  <title>My Website</title>
-  <meta
-    charset="UTF-8"
-    name="viewport"
-    content="width=device-width, initial-scale=1"
-  />
-  <link rel="stylesheet" href="./stlyes/styles.css" />
-</head>
+<html>
+  <head>
+    <title>My Website</title>
+    <meta
+      charset="UTF-8"
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <link rel="stylesheet" href="./stlyes/styles.css" />
+  </head>
 
-<body>
-  <div class="bg">
+  <body>
     <header>
-      <title>Personal Website</title>
-      <h1 class="header-title">Personal Website</h1>
-      <nav class="navigation">
-        <a href="" class="navigation-content">About me</a>
-        <a href="" class="navigation-content">Contact</a>
-        <a href="" class="navigation-content">Skillset</a>
-      </nav>
+      <section >
+        <title>Personal Website</title>
+        <h1 class="header__title">Hello!</h1>
+      </section>
     </header>
 
-    <main></main>
-  </div>
-</body>
+    <main>
+      <section class="main__nav">
+        <nav class="navigation">
+          <a href="" class="navigation__haiku">Haiku</a>
+          <a href="" class="navigation__werke">Meine Werke</a>
+          <a href="" class="navigation__aboutme">Das bin ich</a>
+        </nav>
+      </section>
+    </main>
+    </section>
+  </body>
 
-<footer></footer>
+  <footer>
+    <p>
+      Impressum
+    </p>
+  </footer>
+</html>
